# ml-production

./: .gitignore  pyproject.toml
1/: 1.1-models.ipynb  1.2-mlflow.ipynb  mlflow.db
2/: 2-features.ipynb  create_features.py
2/nyc_taxi_demand/feature_repo/: feature_store.yaml  features.py
2/nyc_taxi_demand/feature_repo/data/: demand_agg_with_ts.parquet  online_store.db  registry.db
3/: 3-mlflow-production.ipynb
3/monitoring/data/: current_data.parquet  reference_data.parquet
4/: load_results.txt  shadow_mode_log.txt
4/api/: main.py  requests.http
4/testing/: load_test.py
5/: data_drift_report.html  run_monitoring.py
6/: compare_strategies.py  train_batch.py  train_online.py
