[project]
name = "bigdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "aiohttp>=3.13.2",
    "evidently>=0.7.16",
    "feast>=0.57.0",
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "river>=0.23.0",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
]
